# treelite-ng

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml
cmake/: ExternalLibs.cmake  version.h.in
conda/environments/: treelite_dev.yaml
dev/: run_cpplint.py  run_pylint.py
include/treelite/: c_api.h  contiguous_array.h  frontend.h  gtil.h  logging.h  model_builder.h  model_loader.h  tree.h
include/treelite/detail/: contiguous_array.h  serializer_mixins.h  tree.h
include/treelite/enum/: operator.h  task_type.h  tree_node_type.h  typeinfo.h
python/pybind11/: frontend.cc  logging.cc  module.cc  module.h  tree.cc
python/treelite/: __init__.py  _ext.pyi  compat.py  core.py  frontend.py  model.py  model_builder.py  util.py
python/treelite/gtil/: gtil.py
python/treelite/sklearn/: __init__.py  importer.py
src/: CMakeLists.txt  json_serializer.cc  logging.cc  model_builder.cc  serializer.cc
src/c_api/: c_api.cc  c_api_utils.h  frontend.cc  gtil.cc  model.cc  model_loader.cc  sklearn.cc
src/enum/: operator.cc  task_type.cc  tree_node_type.cc  typeinfo.cc
src/frontend/: xgboost.cc  xgboost_json.cc  xgboost_legacy.cc
src/frontend/detail/: common.h  xgboost.cc  xgboost.h  xgboost_json.h
src/gtil/: config.cc  output_shape.cc  output_size.cc  pred_transform.cc  pred_transform.h  predict.cc
src/gtil/detail/: omp_exception.h  threading_utils.h
src/model_builder/: metadata.cc  model_builder.cc
src/model_builder/detail/: concrete_states.cc  concrete_states.h  json_parsing.h  state_machine.cc  state_machine.h
src/model_loader/: lightgbm.cc  sklearn.cc  xgboost_json.cc  xgboost_legacy.cc
src/model_loader/detail/: common.h  file_utils.h  lightgbm.h  xgboost.cc  xgboost.h  xgboost_json.h
tests/cpp/: CMakeLists.txt  test_gtil.cc  test_model_builder.cc  test_model_loader.cc  test_serializer.cc
tests/cython/: compatibility_tester.py  frame_inspector.py  serializer.pyx  test_serializer.py
tests/python/: hypothesis_util.py  test_gtil.py  test_lightgbm_integration.py  test_model_builder.py  test_model_concat.py  test_serializer.py  test_sklearn_integration.py  test_xgboost_integration.py  util.py
