[build-system]
requires = ["scikit-build-core>=0.4.8"]
build-backend = "scikit_build_core.build"

[project]
name = "treelite"
version = "4.0.0-dev"
authors = [
    {name = "Hyunsu Cho", email = "chohyu01@cs.washington.edu"}
]
description = "Treelite: Universal model exchange format for decision tree forests"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "numpy",
    "scipy"
]

[project.urls]
documentation = "https://treelite.readthedocs.io/en/latest/"
repository = "https://github.com/dmlc/treelite"

[project.optional-dependencies]
scikit-learn = ["scikit-learn"]
testing = ["scikit-learn", "pytest", "hypothesis", "pandas"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["python/treelite"]
sdist.exclude = [
    ".github", "conda", "dev", "tests",
    "python/.pylintrc", ".clang-format", ".flake8",
    ".gitignore", ".pre-commit-config.yaml"
]
